nyelesain mobile responsive

--- a/Views/CareerPage.cshtml
+++ b/Views/CareerPage.cshtml
@@ -49,17 +49,17 @@
     			        {
     			            <tr>
     			                <th scope="row">
-            						<div class="px-3 m-2 py-3 w-full border-green text-center rounded me-3 fw-bold text-primary" style="height: 90px; display: flex; align-items: center; justify-content: center;">
+            						<div class="karir-td px-3 m-2 py-3 w-full border-green text-center rounded me-3 fw-bold text-primary" style="">
 										<p class="text-center m-0">@item.KarirListPosisi</p>
 									</div>
             					</th>
             					<td>
-            						<div class="px-3 m-2 py-3 w-full border-green text-center rounded me-3 fw-bold text-primary" style="height: 90px; display: flex; align-items: center; justify-content: center;">
+            						<div class="karir-td px-3 m-2 py-3 w-full border-green text-center rounded me-3 fw-bold text-primary" style="">
 										<p class="text-center m-0">@item.KarirListLokasi</p>
 									</div>
             					</td>
             					<td>
-            						<div class="px-3 m-2 py-3 w-full border-green text-center rounded me-3 fw-bold text-primary" style="height: 90px; display: flex; align-items: center; justify-content: center;">
+            						<div class="karir-td px-3 m-2 py-3 w-full border-green text-center rounded me-3 fw-bold text-primary" style="">
 										<p class="text-center m-0">@item.KarirListFungsi</p>
 									</div>
             					</td>
