--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 <div class="bg-gray my-5 p-3 d-flex flex-column justify-content-between align-items-center container-licensor">
-	<h3 class="text-green">Licensors and The Associated Units</h3>
+	<h3 class="text-green text-center">Licensors and The Associated Units</h3>
 	<div class="our-project-slider-upper swiper container py-5">
 		<div class="swiper-wrapper align-items-center">
 				@if (Model.OurProjectLicensorAssociatedList != null)
@@ -75,7 +75,7 @@
 				        var mediaImage = item.Value<MediaWithCrops>("CompletedInvolvementImage");
 				        
 				        <div class="swiper-slide">
-        					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+        					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="aspect-ratio: 1/1;">
         						<div class="gambar">
         								<img width="40%" src="@mediaImage.MediaUrl()">
         						</div>
@@ -142,13 +142,15 @@
 <div class="container-site-activities bg-gray my-5 p-3" data-aos="fade-up">
 	<div class="container">
 		<h3 class="text-green text-center">Site Activities</h3>
-		<div class="d-flex justify-content-between align-items-end flex-wrap">
+		<div class="site-wrapper">
 		    @if (Model.OurProjectSiteActivitiesImage != null)
 			{
 			    foreach (var item in Model.OurProjectSiteActivitiesImage)
 			    {
 			        var mediaImage = item.Value<MediaWithCrops>("SiteActivitiesImage");
-			        <img src="@mediaImage.MediaUrl()" width="24%" height="24%" style="margin: 1rem 0" alt="">
+					<div class="gambar" style="" >
+			        	<img src="@mediaImage.MediaUrl()" alt="">
+					</div>
 			    }
 			}
 		</div>
@@ -161,54 +163,3 @@
     }
 	<img src="@mediaBannerBottom.MediaUrl()" width="100%" alt="">
 </div>
-
-<!-- NANTI PINDAH KE TENTANG-PETROKIMIA -->
-<!-- <div class="container">
-	<div class="rich-text-content" data-aos="fade-up">
-		<h3>@Model.ProdukLainnyaContentTitle</h3>
-		<p>@Model.ProdukLainnyaContent</p>
-	</div>
-	<div class="bbm" data-aos="fade-up">
-		<h2>@Model.BbmTitle</h2>
-		<div class="bbm-flex">
-			<div class="bbm-produk">
-				<h3>@Model.BbmProductTitle</h3>
-				<div class="bbm-produk-list">
-					@foreach (var item in Model.BbmProducts)
-					{
-						<h4>@item</h4>
-					}
-				</div>
-			</div>
-			<div class="bbm-image">
-				<img src="@Model.BbmImage.Url()">
-			</div>
-		</div>
-	</div>
-
-	<div class="produk-lainnya" data-aos="fade-up">
-		<h2>@Model.ProdukLainnyaTitle</h2>
-		<div class="produk-lainnya-image">
-			<img src="@Model.ProdukLainnyaImage.Url()">
-		</div>
-		<div class="produk-lainnya-wrapper">
-			<div class="produk-lainnya-produk-title-flex">
-				<h3>@Model.ProdukLainnyaProdukTitle</h3>
-				<h3>@Model.ProdukLainnyaTotalTitle</h3>
-			</div>
-			@foreach (var item in Model.ProdukLainnyaList)
-			{
-				<div class="produk-lainnya-list">
-					<h4>@item.ProductsKey</h4>
-					<h4>@item.ProductsValue</h4>
-				</div>
-			}
-			<div class="produk-lainnya-total-flex">
-				<h3>Total</h3>
-				<h3>@Model.ProdukLainnyaTotalValue</h3>
-			</div>
-		</div>
-	</div>
-</div> -->
-
-
