benerin item kosong

--- a/Views/Partials/listPengumuman.cshtml
+++ b/Views/Partials/listPengumuman.cshtml
@@ -62,7 +62,7 @@
         @if (selection == null || !selection.Any())
         {
             <div class="item-kosong">
-				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong pengumuman")</h3>
 			</div>
         }
     </div>
