--- a/Views/Partials/listBerita.cshtml
+++ b/Views/Partials/listBerita.cshtml
@@ -60,7 +60,7 @@
         @if (selection == null || !selection.Any())
         {	
 			<div class="item-kosong">
-				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong berita")</h3>
 			</div>
         }
     </div>
