--- a/Views/Partials/listLaporan.cshtml
+++ b/Views/Partials/listLaporan.cshtml
@@ -3,6 +3,16 @@
 @using Umbraco.Web.Models;
 
 
+@{
+    var selection = Umbraco.Content(Guid.Parse("63184ab7-8b47-4f7a-9904-bf3c815abad3"))
+    .Children()
+    .Where(x => x.IsVisible())
+    .OrderByDescending(x => x.CreateDate);
+    
+}
+
+@if (selection != null){
+
 <div class="container slider-container " data-aos="fade-up">
     <div class="laporantahunan-slider swiper">
         <div class="berita-head">
@@ -19,13 +29,6 @@
             }
         </div>
         <div class="swiper-wrapper">
-
-            @{
-                var selection = Umbraco.Content(Guid.Parse("63184ab7-8b47-4f7a-9904-bf3c815abad3"))
-                .Children()
-                .Where(x => x.IsVisible())
-                .OrderByDescending(x => x.CreateDate);
-            }
             @if (selection != null)
             {
                 foreach (var item in selection)
@@ -62,8 +65,10 @@
         @if (selection == null || !selection.Any())
         {
             <div class="item-kosong">
-				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong laporan")</h3>
 			</div>
         }
     </div>
 </div>
+
+}
