--- a/Views/Partials/listPengadaanHorizontal.cshtml
+++ b/Views/Partials/listPengadaanHorizontal.cshtml
@@ -60,7 +60,7 @@
         @if (selection == null || !selection.Any())
         {
             <div class="item-kosong">
-				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong pengadaan")</h3>
 			</div>
         }
     </div>
