--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 <div class="bg-gray my-5 p-3 d-flex flex-column justify-content-between align-items-center container-licensor">
-	<h3 class="text-green text-center">Licensors and The Associated Units</h3>
+	<h3 class="text-green text-center">@Model.OurProjectLicensorAssociatedTitle</h3>
 	<div class="our-project-slider-upper swiper container py-5">
 		<div class="swiper-wrapper align-items-center">
 				@if (Model.OurProjectLicensorAssociatedList != null)
@@ -65,7 +65,7 @@
 </div>
 
 <div class="container container-third-parties mt-5" data-aos="fade-up">
-	<h3 class="text-green text-center">Completed Studies and Third Parties Involvement</div>
+	<h3 class="text-green text-center">@Model.OurProjectCompletedInvolvementTitle</div>
 	<div class="our-project-slider-lower swiper container py-5">
 		<div class="swiper-wrapper align-items-center">
 		        @if (Model.OurProjectCompletedInvolvementList != null)
@@ -95,7 +95,7 @@
 </div>
 
 <div class="container container-engineering-activities my-5" data-aos="fade-up">
-	<h3 class="text-green">Engineering Activities</h3>
+	<h3 class="text-green">@Model.OurProjectEngineeringTitle</h3>
 	<p>@Model.OurProjectEngineeringContent</p>
 	<div class="d-flex justify-content-between align-items-end">
 		<div style="width:49%;position:relative">
@@ -120,7 +120,7 @@
 </div>
 
 <div class="container container-campus-overview my-5" data-aos="fade-up">
-	<h3 class="text-green text-center">Campus Overview</h3>
+	<h3 class="text-green text-center">@Model.OurProjectCampusImageTitle</h3>
 	<div class="image-list d-flex justify-content-between align-items-end flex-wrap">
 	    @{
 	        var mediaCampus1 = Model.Value<MediaWithCrops>("ourProjectCampusImage1");
@@ -141,7 +141,7 @@
 
 <div class="container-site-activities bg-gray my-5 p-3" data-aos="fade-up">
 	<div class="container">
-		<h3 class="text-green text-center">Site Activities</h3>
+		<h3 class="text-green text-center">@Model.OurProjectSiteActivitiesTitle</h3>
 		<div class="site-wrapper">
 		    @if (Model.OurProjectSiteActivitiesImage != null)
 			{
