--- a/Views/GovernanceAndBusinessEthicsPage.cshtml
+++ b/Views/GovernanceAndBusinessEthicsPage.cshtml
@@ -26,7 +26,7 @@
 
 
 <div class="container container-tata-kelola px-2 sustainable-sub-content sustainable-sub-content-2 rich-text-content" style="margin: 0 auto; " data-aos="fade-up">
-    <img src="/images/etika-bisnis-img.png">
+    <img src="@Model.GovernanceContentImageImage.Url()">
     <h3 style="color: #AEC23C ">@Model.GovernanceContentTitle</h3>
     <p>@Model.GovernanceContentText</p>
 </div>
