hapus karir banner dan gallery title

--- a/Views/GalleryPage.cshtml
+++ b/Views/GalleryPage.cshtml
@@ -26,7 +26,7 @@
 </div>
 
 <main class="main-galeri bg-white w-full bg-white py-5 border-top">
-	<h3 class="text-center">@Model.GaleriTitle</h3>
+	@* <h3 class="text-center">@Model.GaleriTitle</h3> *@
 	<div class="container album-container">
 		@{
 			var indexAlbumThumbnail = 0;
