--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -249,7 +249,7 @@
 	</div>
 </div>
 
-<div class="fluid-container home-karir d-flex " data-aos="fade-up">
+@* <div class="fluid-container home-karir d-flex " data-aos="fade-up">
 	<div class="home-karir-vektor">
 		<img src="/images/mekanik.png" class="mekanik">
 		<img src="/images/rumput.png" class="rumput">
@@ -266,6 +266,4 @@
 			}
 		</div>
 	</div>
-
-	@* *@
-</div>
+</div> *@
