--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -210,7 +210,7 @@
 	@* *@
 </div>
 
-<div class="swiper container home-pengadaan" id="homepengadaan" data-aos="fade-up">
+<div class="swiper container home-pengadaan pb-5" id="homepengadaan" data-aos="fade-up">
 	<div class="home-pengadaan-head">
 		<h2>@Model.PengadaanTitle</h2>
 		<p>@Model.PengadaanDescription</p>
