hapus karir banner

--- a/Views/CareerPage.cshtml
+++ b/Views/CareerPage.cshtml
@@ -103,7 +103,7 @@
 <!-- === KARIR BANNER === -->
 <!-- ==================== -->
 
-<div class="fluid-container home-karir d-flex " data-aos="fade-up">
+@* <div class="fluid-container home-karir d-flex " data-aos="fade-up">
 	<div class="home-karir-vektor">
 		<img src="/images/mekanik.png" class="mekanik">
 		<img src="/images/rumput.png" class="rumput">
@@ -120,8 +120,8 @@
 						class="fa-solid fa-arrow-right"></i></a>
 			}
 		</div>
-</div>
-</div>
+	</div>
+</div> *@
 
 <!-- MODAL -->
 @* *@
